# ColumnMode-HlslShaderToy

./: .gitignore  CMakeLists.txt  packages.config
BuiltInShaders/: CMakeLists.txt  PS_Magenta.hlsl  VS_ScreenSpacePassthrough.hlsl
BuiltInShaders/CompilationHelper/: CMakeLists.txt
inc/: Plugin.h  Renderer.h  ResourceManager.h  ShaderCompiler.h  ShaderToyWindow.h  StepTimer.h  UIElements.cpp  UIElements.h  UILayouts.h  pch.h  util.h
interface/: ColumnModePluginAPI.h
src/: CM_HlslShaderToy.def  CMakeLists.txt  Plugin.cpp  Renderer.cpp  ResourceManager.cpp  ShaderCompiler.cpp  ShaderToyWindow.cpp  UIElements.cpp  UILayouts.cpp  dllmain.cpp
